Changed logging service to asynchronous, added Lambda functions and SQS